Adicionando caminho do veículo ate a saída do estacionamento e do mapa